--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="search"
         class="search-input"
         type="text"
-        placeholder="搜索动漫 / 番剧 / 角色"
+        placeholder="搜索动漫 / 例如/ 仙逆"
       />
     </div>
   </header>
@@ -30,3 +30,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
