--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <!-- 搜索结果将在这里显示 -->
     </div>
 
-    <script src="your_script.js"></script> <!-- 确保这个路径正确 -->
+    <script src="script.js"></script> <!-- 确保这个路径正确 -->
 </body>
 </html>
+
